# rust-nodejs

./: .gitignore  Cargo.toml  README.md  build.rs  checksums  checksums.sha1
.cargo/: config.toml
.github/workflows/: build_libnode.yml  clippy.yml  posix.yml  publish.yml  rust.yml  test.yml  windows.yml
crates/nodejs/: Cargo.toml
crates/nodejs/src/: lib.rs  sys.rs
crates/nodejs/tests/: napi_module.rs  simple.rs
crates/nodejs_build/: Cargo.toml
crates/nodejs_build/src/: lib.rs
crates/nodejs_sys/: Cargo.toml  build.rs
crates/nodejs_sys/src/: lib.rs
crates/nodejs_tests/: Cargo.toml  build.rs
crates/nodejs_tests/_tests/: common.rs  napi_module.rs
crates/nodejs_tests/src/: lib.rs
examples/: example.rs
libnode/: README.md
libnode/patch/: node.patch
libnode/patch/node/src/: node_embedding_api.cc  node_embedding_api.h
libnode/scripts/: archive.py  build.py  config.py  postproc.py  test.py
nodejs/: Cargo.toml  build.rs  checksums
nodejs-bin/: Cargo.toml  build.rs
nodejs-bin/src/: lib.rs  main.rs
nodejs-embedded/: Cargo.toml  build.rs
nodejs-embedded/src/: lib.rs  main.rs
nodejs-tests/: Cargo.toml
nodejs-tests/tests/: require.rs  simple.rs
src/: exts.rs  lib.rs  napi_symbols.rs  sys.rs
tests/: napi_module.rs  require.rs  simple.rs
tests/napi_module/: addon.js  package.json
