[package]
name = "nodejs"
version = "0.1.0"
authors = ["patr0nus <dk4rest@gmail.com>"]
edition = "2018"

[features]
no-intl = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
napi-sys = { version = "1", features = [ "napi6" ]}
once_cell = "1"
paste = "1"

[dependencies.neon]
git = 'https://github.com/patr0nus/neon'
branch = "main"
default-features = false
features = [ "napi-6", "event-queue-api",  "try-catch-api" ]

[dev-dependencies]
anyhow = "1"

[build-dependencies]
reqwest = { version = "0.11", features = [ "blocking" ] }
anyhow = "1"
sha-1 = "0.9"
hex = "0.4"
zip-extract = "0.1"
once_cell = "1"
strum = { version = "0.20", features = [ "derive" ] }
