[package]
name = "nodejs"
version = "0.1.1"
authors = ["patr0nus <dk4rest@gmail.com>"]
license = "MIT"
description = "Embedding Node.js in Rust"
edition = "2018"
keywords = [ "node", "nodejs", "js", "javascript", "embedding" ]
homepage = "https://github.com/patr0nus/rust-nodejs"
repository = "https://github.com/patr0nus/rust-nodejs"

[features]
no-intl = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
napi-sys = { version = "1", features = [ "napi7" ]}
neon = { version = "0.9.0", default-features = false, features = [ "napi-6", "channel-api",  "try-catch-api" ] }
once_cell = "1"
paste = "1"

[dev-dependencies]
anyhow = "1"

[build-dependencies]
anyhow = "1"
sha-1 = "0.9"
hex = "0.4"
zip-extract = "0.1"
once_cell = "1"
strum = { version = "0.20", features = [ "derive" ] }

[build-dependencies.attohttpc]
version = "0.17"
default-features = false # No need for the compress feature
features = [ "tls" ]
