[package]
name = "nodejs"
version = "0.5.0"
authors = ["patr0nus <dk4rest@gmail.com>"]
license = "MIT"
description = "Embedding Node.js in Rust"
edition = "2018"
keywords = [ "node", "nodejs", "js", "javascript", "embedding" ]
homepage = "https://github.com/patr0nus/rust-nodejs"
repository = "https://github.com/patr0nus/rust-nodejs"
exclude = [ "/.github", "/.cargo", "/libnode" ]

[lib]
doctest = false # Doc-tests would fail because it doesn't read rustflags in .config.toml: https://github.com/rust-lang/cargo/issues/6650

[features]
full-icu = []


[[test]]
name = "require"
path = "tests/require.rs"
required-features = ["neon"]

[[test]]
name = "simple"
path = "tests/simple.rs"
required-features = ["neon"]

[dependencies]
once_cell = "1"
neon = { optional = true, version = "0.9.0", default-features = false, features = [ "napi-6", "channel-api" ] }
libc = "0.2"

[dev-dependencies]
anyhow = "1"
fs_extra = "1"
chazi = "0.1"

[build-dependencies]
ring = "0.16"
hex = "0.4"
zip-extract = "0.1"
strum = { version = "0.20", features = [ "derive" ] }
anyhow = "1"

[build-dependencies.attohttpc]
version = "0.18"
default-features = false # No need for the compress feature
features = [ "rustls" ]
