[package]
name = "nodejs-bin"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nodejs = { path = "../nodejs" }
libloading = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
