[package]
name = "nodejs-tests"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
full-icu = [ "nodejs/full-icu" ]

[dependencies]
nodejs = { path = "../nodejs", features = [ "neon" ] }

[dev-dependencies]
anyhow = "1"
fs_extra = "1"
chazi = "0.1"
