[package]
name = "nodejs"
version = "0.4.0"
authors = ["patr0nus <dk4rest@gmail.com>"]
license = "MIT"
description = "Embedding Node.js in Rust"
edition = "2021"
keywords = [ "node", "nodejs", "js", "javascript", "embedding" ]
homepage = "https://github.com/patr0nus/rust-nodejs"
repository = "https://github.com/patr0nus/rust-nodejs"

[lib]
doctest = false # Doc-_tests would fail because it doesn't read rustflags in .config.toml: https://github.com/rust-lang/cargo/issues/6650

[features]
full-icu = [ "nodejs_sys/full-icu" ]

[dependencies]
neon = { version = "0.9.0", default-features = false, features = [ "napi-6" ] }
once_cell = "1"
nodejs_sys = { version = "0.1", path = "../nodejs_sys" }

[dev-dependencies]
anyhow = "1"
fs_extra = "1"
