[package]
name = "nodejs_sys"
version = "0.1.0"
edition = "2021"
authors = ["patr0nus <dk4rest@gmail.com>"]

[features]
full-icu = []

[build-dependencies]
ring = "0.16"
hex = "0.4"
zip-extract = "0.1"
once_cell = "1"
strum = { version = "0.20", features = [ "derive" ] }
anyhow = "1"

[build-dependencies.attohttpc]
version = "0.18"
default-features = false # No need for the compress feature
features = [ "rustls" ]
